[package]
name = "cryptoproject"
version = "0.1.0"
authors = ["Levon <levon.mesropyan@orchestra.group>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exonum = "1.0.0"
exonum-crypto = "1.0.0"
exonum-derive = "1.0.0"
exonum-merkledb = "1.0.0"
exonum-proto = "1.0.0"
exonum-rust-runtime = "1.0.0"

anyhow = "1.0.26"
protobuf = "2.14.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
exonum-cli = "1.0.0"

tokio = { version = "0.2.13", features = ["blocking", "dns", "io-util", "macros", "rt-threaded", "tcp", "time"] }

[build-dependencies]
exonum-build = "1.0.1"